--- a/index.html
+++ b/index.html
@@ -98,27 +98,106 @@
             <h2>Ejemplo 2-3</h2>
 
             <section class="ej23">
-                <p>La fresa es una fruta del bosque adecuada en regímenes dietéticos, dado que tiene escasa concentración de glúcidos. Tiene un sabor muy agradable aunque ligeramente agrio (algunas pocas especies pueden tener sabor dulce).</p>
-                <p>La cereza, también conocido como guinda, es fruto de varios árboles del género Prunus. La cereza es una fruta rica en vitaminas A, B, C, E, K y PP, en hierro, calcio, magnesio, potasio y azufre.</p>
-                <p>La pera comestible es el fruto del peral común (Pyrus communis). La pera es una fruta jugosa, carnosa, y una de las más importantes producidas en las regiones templadas.</p>
-                <p>El plátano (también llamado banana, banano o guineo) es un fruto con cualidades variables en tamaño, color y firmeza, alargado, generalmente curvado y carnoso, rico en almidón cubierto con una cáscara, que puede ser verde, amarilla, roja, púrpura o marrón cuando está madura. Los frutos crecen en piñas que cuelgan de la parte superior de la planta.</p>
-                <p>La sandía es una fruta originaria de África, pero tiene una gran presencia y difusión en Asia. Hoy en día se cultiva de manera extendida por todo el mundo debido a su fruto, un pepónide de enorme tamaño —el récord entre las verduras fue una sandía de 120 kg.</p>
+                <table class="ej230">
+                    <tr>
+                    <td class="primero">&#x1f353;</td>
+                    <td>La fresa es una fruta del bosque adecuada en regímenes dietéticos, dado que tiene escasa concentración de glúcidos. Tiene un sabor muy agradable aunque ligeramente agrio (algunas pocas especies pueden tener sabor dulce).</td>
+                    </tr>
+                </table>
+                <table class="ej230">
+                    <tr>
+                    <td class="primero">&#x1f352;</td>
+                    <td>La cereza, también conocido como guinda, es fruto de varios árboles del género Prunus. La cereza es una fruta rica en vitaminas A, B, C, E, K y PP, en hierro, calcio, magnesio, potasio y azufre.</td>
+                    </tr>
+                </table>
+                <table class="ej230">
+                    <tr>
+                    <td class="primero">&#x1f350;</td>
+                    <td>La pera comestible es el fruto del peral común (Pyrus communis). La pera es una fruta jugosa, carnosa, y una de las más importantes producidas en las regiones templadas.</td>
+                    </tr>
+                </table>
+                <table class="ej230">
+                    <tr>
+                    <td class="primero">&#x1f34c;</td>
+                    <td>El plátano (también llamado banana, banano o guineo) es un fruto con cualidades variables en tamaño, color y firmeza, alargado, generalmente curvado y carnoso, rico en almidón cubierto con una cáscara, que puede ser verde, amarilla, roja, púrpura o marrón cuando está madura. Los frutos crecen en piñas que cuelgan de la parte superior de la planta.</td>
+                    </tr>
+                </table>
+                <table class="ej230">
+                    <tr>
+                    <td class="primero">&#x1f349;</td>
+                    <td>La sandía es una fruta originaria de África, pero tiene una gran presencia y difusión en Asia. Hoy en día se cultiva de manera extendida por todo el mundo debido a su fruto, un pepónide de enorme tamaño —el récord entre las verduras fue una sandía de 120 kg.</td>
+                    </tr>
+                </table>
             </section>
 
         <h2>Ejemplo 2-4</h2>
 
             <section class="ej24">
-                <p>La fresa es una fruta del bosque adecuada en regímenes dietéticos, dado que tiene escasa concentración de glúcidos. Tiene un sabor muy agradable aunque ligeramente agrio (algunas pocas especies pueden tener sabor dulce).</p>
-                <p>La cereza, también conocido como guinda, es fruto de varios árboles del género Prunus. La cereza es una fruta rica en vitaminas A, B, C, E, K y PP, en hierro, calcio, magnesio, potasio y azufre.</p>
-                <p>La pera comestible es el fruto del peral común (Pyrus communis). La pera es una fruta jugosa, carnosa, y una de las más importantes producidas en las regiones templadas.</p>
-                <p>El plátano (también llamado banana, banano o guineo) es un fruto con cualidades variables en tamaño, color y firmeza, alargado, generalmente curvado y carnoso, rico en almidón cubierto con una cáscara, que puede ser verde, amarilla, roja, púrpura o marrón cuando está madura. Los frutos crecen en piñas que cuelgan de la parte superior de la planta.</p>
-                <p>La sandía es una fruta originaria de África, pero tiene una gran presencia y difusión en Asia. Hoy en día se cultiva de manera extendida por todo el mundo debido a su fruto, un pepónide de enorme tamaño —el récord entre las verduras fue una sandía de 120 kg.</p>
+                <table>
+                    <tr>
+                    <td class="segundo">&#x1f353;</td>
+                    <td>La fresa es una fruta del bosque adecuada en regímenes dietéticos, dado que tiene escasa concentración de glúcidos. Tiene un sabor muy agradable aunque ligeramente agrio (algunas pocas especies pueden tener sabor dulce).</td>
+                    </tr>
+                </table>
+                <table>
+                    <tr>
+                    <td class="segundo">&#x1f352;</td>
+                    <td>La cereza, también conocido como guinda, es fruto de varios árboles del género Prunus. La cereza es una fruta rica en vitaminas A, B, C, E, K y PP, en hierro, calcio, magnesio, potasio y azufre.</td>
+                    </tr>
+                </table>
+                <table>
+                    <tr>
+                    <td class="segundo">&#x1f350;</td>
+                    <td>La pera comestible es el fruto del peral común (Pyrus communis). La pera es una fruta jugosa, carnosa, y una de las más importantes producidas en las regiones templadas.</td>
+                    </tr>
+                </table>
+                <table>
+                    <tr>
+                    <td class="segundo">&#x1f34c;</td>
+                    <td>El plátano (también llamado banana, banano o guineo) es un fruto con cualidades variables en tamaño, color y firmeza, alargado, generalmente curvado y carnoso, rico en almidón cubierto con una cáscara, que puede ser verde, amarilla, roja, púrpura o marrón cuando está madura. Los frutos crecen en piñas que cuelgan de la parte superior de la planta.</td>
+                    </tr>
+                </table>
+                <table>
+                    <tr>
+                    <td class="segundo">&#x1f349;</td>
+                    <td>La sandía es una fruta originaria de África, pero tiene una gran presencia y difusión en Asia. Hoy en día se cultiva de manera extendida por todo el mundo debido a su fruto, un pepónide de enorme tamaño —el récord entre las verduras fue una sandía de 120 kg.</td>
+                    </tr>
+                </table>
             </section>
 
         <h2>Ejemplo 2-5</h2>
 
             <section class="ej25">
-                
+                <table class="ej25">
+                    <tr>
+                    <td class="tercero">&#x1f353;</td>
+                    <td>Fresa</td>
+                    </tr>
+                </table>
+                <table class="ej230">
+                    <tr>
+                    <td class="tercero">&#x1f352;</td>
+                    <td>Cerezas</td>
+                    </tr>
+                </table>
+                <table class="ej230">
+                    <tr>
+                    <td class="tercero">&#x1f350;</td>
+                    <td>Pera</td>
+                    </tr>
+                </table>
+                <table class="ej230">
+                    <tr>
+                    <td class="tercero">&#x1f34c;</td>
+                    <td>Plátano</td>
+                    </tr>
+                </table>
+                <table class="ej230">
+                    <tr>
+                    <td class="tercero">&#x1f349;</td>
+                    <td>Sandía</td>
+                    </tr>
+                </table>
             </section>
 
         <h2>Ejemplo 3-1</h2>
@@ -153,22 +232,112 @@
 
         <h2>Ejemplo 3-2</h2>
 
-            <section class="ej32">
-                <p>La fresa es una fruta del bosque adecuada en regímenes dietéticos, dado que tiene escasa concentración de glúcidos. Tiene un sabor muy agradable aunque ligeramente agrio (algunas pocas especies pueden tener sabor dulce).</p>
-                <p>La cereza, también conocido como guinda, es fruto de varios árboles del género Prunus. La cereza es una fruta rica en vitaminas A, B, C, E, K y PP, en hierro, calcio, magnesio, potasio y azufre.</p>
-                <p>La pera comestible es el fruto del peral común (Pyrus communis). La pera es una fruta jugosa, carnosa, y una de las más importantes producidas en las regiones templadas.</p>
-                <p>El plátano (también llamado banana, banano o guineo) es un fruto con cualidades variables en tamaño, color y firmeza, alargado, generalmente curvado y carnoso, rico en almidón cubierto con una cáscara, que puede ser verde, amarilla, roja, púrpura o marrón cuando está madura. Los frutos crecen en piñas que cuelgan de la parte superior de la planta.</p>
-                <p>La sandía es una fruta originaria de África, pero tiene una gran presencia y difusión en Asia. Hoy en día se cultiva de manera extendida por todo el mundo debido a su fruto, un pepónide de enorme tamaño —el récord entre las verduras fue una sandía de 120 kg.</p>
-            </section>
+        <section class="ej32">
+            <table>
+                <tr>
+                    <td class="img">&#x1f353;</td>
+                    <td>
+                        <p class="tit">Fresa</p>
+                        <p>La fresa es una fruta del bosque adecuada en regímenes dietéticos, dado que tiene escasa concentración de glúcidos. Tiene un sabor muy agradable aunque ligeramente agrio (algunas pocas especies pueden tener sabor dulce).</p>
+                    </td>
+                </tr>
+            </table>
+            <table>
+                <tr>
+                    <td class="img">&#x1f352;</td>
+                    <td>
+                        <p class="tit">Cereza</p>
+                        <p>La cereza, también conocido como guinda, es fruto de varios árboles del género Prunus. La cereza es una fruta rica en vitaminas A, B, C, E, K y PP, en hierro, calcio, magnesio, potasio y azufre.</p>
+                    </td>
+                </tr>
+            </table>
+            <table>
+                <tr>
+                    <td class="img">&#x1f350;</td>
+                    <td>
+                        <p class="tit">Pera</p>
+                        <p>La pera comestible es el fruto del peral común (Pyrus communis). La pera es una fruta jugosa, carnosa, y una de las más importantes producidas en las regiones templadas.</p>
+                    </td>
+                </tr>
+            </table>
+            <table>
+                <tr>
+                    <td class="img">&#x1f34c;</td>
+                    <td>
+                        <p class="tit">Plátano</p>
+                        <p>El plátano (también llamado banana, banano o guineo) es un fruto con cualidades variables en tamaño, color y firmeza, alargado, generalmente curvado y carnoso, rico en almidón cubierto con una cáscara, que puede ser verde, amarilla, roja, púrpura o marrón cuando está madura. Los frutos crecen en piñas que cuelgan de la parte superior de la planta.</p>
+                    </td>
+                </tr>
+            </table>
+            <table>
+                <tr>
+                    <td class="img">&#x1f349;</td>
+                    <td>
+                        <p class="tit">Sandía</p>
+                        <p>La sandía es una fruta originaria de África, pero tiene una gran presencia y difusión en Asia. Hoy en día se cultiva de manera extendida por todo el mundo debido a su fruto, un pepónide de enorme tamaño —el récord entre las verduras fue una sandía de 120 kg.</p>
+                    </td>
+                </tr>
+            </table>
+        </section>
 
         <h2>Ejemplo 3-3</h2>
 
             <section class="ej33">
-                <p>La fresa es una fruta del bosque adecuada en regímenes dietéticos, dado que tiene escasa concentración de glúcidos. Tiene un sabor muy agradable aunque ligeramente agrio (algunas pocas especies pueden tener sabor dulce).</p>
-                <p>La cereza, también conocido como guinda, es fruto de varios árboles del género Prunus. La cereza es una fruta rica en vitaminas A, B, C, E, K y PP, en hierro, calcio, magnesio, potasio y azufre.</p>
-                <p>La pera comestible es el fruto del peral común (Pyrus communis). La pera es una fruta jugosa, carnosa, y una de las más importantes producidas en las regiones templadas.</p>
-                <p>El plátano (también llamado banana, banano o guineo) es un fruto con cualidades variables en tamaño, color y firmeza, alargado, generalmente curvado y carnoso, rico en almidón cubierto con una cáscara, que puede ser verde, amarilla, roja, púrpura o marrón cuando está madura. Los frutos crecen en piñas que cuelgan de la parte superior de la planta.</p>
-                <p>La sandía es una fruta originaria de África, pero tiene una gran presencia y difusión en Asia. Hoy en día se cultiva de manera extendida por todo el mundo debido a su fruto, un pepónide de enorme tamaño —el récord entre las verduras fue una sandía de 120 kg.</p>
+                <table>
+                    <tr>
+                        <td class="borde">&#x1f353;</td>
+                        <td class="fruta">Fresa</td>
+                    </tr>
+                    <tr>
+                        <td colspan="2" class="tex">
+                            <p>La fresa es una fruta del bosque adecuada en regímenes dietéticos, dado que tiene escasa concentración de glúcidos. Tiene un sabor muy agradable aunque ligeramente agrio (algunas pocas especies pueden tener sabor dulce).</p>
+                        </td>
+                    </tr>
+                </table>
+                <table>
+                    <tr>
+                        <td class="borde">&#x1f352;</td>
+                        <td class="fruta">Cerezas</td>
+                    </tr>
+                    <tr>
+                        <td colspan="2" class="tex">
+                            <p>La cereza, también conocido como guinda, es fruto de varios árboles del género Prunus. La cereza es una fruta rica en vitaminas A, B, C, E, K y PP, en hierro, calcio, magnesio, potasio y azufre.</p>
+                        </td>
+                    </tr>
+                </table>
+                <table>
+                    <tr>
+                        <td class="borde">&#x1f350;</td>
+                        <td class="fruta">Pera</td>
+                    </tr>
+                    <tr>
+                        <td colspan="2" class="tex">
+                            <p>La pera comestible es el fruto del peral común (Pyrus communis). La pera es una fruta jugosa, carnosa, y una de las más importantes producidas en las regiones templadas.</p>
+                        </td>
+                    </tr>
+                </table>
+                <table>
+                    <tr>
+                        <td class="borde">&#x1f34c;</td>
+                        <td class="fruta">Plátano</td>
+                    </tr>
+                    <tr>
+                        <td colspan="2" class="tex">
+                            <p>El plátano (también llamado banana, banano o guineo) es un fruto con cualidades variables en tamaño, color y firmeza, alargado, generalmente curvado y carnoso, rico en almidón cubierto con una cáscara, que puede ser verde, amarilla, roja, púrpura o marrón cuando está madura. Los frutos crecen en piñas que cuelgan de la parte superior de la planta.</p>
+                        </td>
+                    </tr>
+                </table>
+                <table>
+                    <tr>
+                        <td class="borde">&#x1f349;</td>
+                        <td class="fruta">Sandía</td>
+                    </tr>
+                    <tr>
+                        <td colspan="2" class="tex">
+                            <p>La sandía es una fruta originaria de África, pero tiene una gran presencia y difusión en Asia. Hoy en día se cultiva de manera extendida por todo el mundo debido a su fruto, un pepónide de enorme tamaño —el récord entre las verduras fue una sandía de 120 kg.</p>
+                        </td>
+                    </tr>
+                </table>
             </section>
 
     </main>    
